037 ==> 196922 : Both mouse buttons change ratings on thumbnail bar.
038 ==> 256789 : Bad calculated album mean date when pictures before 1964.
039 ==> 258775 : Moving an album from one collection to another doesn't update the source collection.
040 ==> 262174 : After confirming a face the mouse pointer is not correct inside the face.
041 ==> 265058 : digiKam crash when editing picture.
042 ==> 263332 : "Tag Filters", "Captions/Tags" right-click options impair usability.
043 ==> 263399 : Marking a face "Unknown"/Unconfirmed is not possible.
044 ==> 142056 : Save changes of image modifications with Versioning.
045 ==> 125387 : Simulate changes to images only.
046 ==> 260274 : Request to setup a git repository for digiKam.
047 ==> 264864 : Keep focus on selected image when change filtering parameters
048 ==> 152424 : Workflow organizing : use Color Label Tags over icon view items.
049 ==> 216726 : Turn off ratings on thumbnails in view mode.
050 ==> 241847 : Workflow organizing : Possibility to pre-mark images for deletion (Pick Labels feature).
051 ==> 264976 : Face detection: "Clear results and rescan" doesn't clear results.
052 ==> 201282 : Sort settings in status bar.
053 ==> 210576 : Move tag filter to the bottom.
054 ==> 262539 : CMake Warning "cycle in the constraint graph" with libkipi.
055 ==> 231597 : Add XCF to the filter list in the album view.
056 ==> 266788 : Showfoto crashes when opening a photo.
057 ==> 266326 : Move digiKam documentation to git.
058 ==> 266327 : Move libkexiv2 to git.
059 ==> 267361 : When using the luminosity curve in the image editor on an initial import from NEF, all changes are irreversible and cumulative.
060 ==> 266733 : digiKam crashes on startup on OS X.
061 ==> 262574 : Add a face tag does not do anything.
062 ==> 266126 : Renaming single file needs to be confirmed twice. 
063 ==> 264976 : face detection: "Clear results and rescan" doesn't clear results.
064 ==>

